# resume-cli

./: .pre-commit-config.yaml  .secrets.baseline  .talismanrc  Dockerfile  Makefile  README.md  app.ini  app.py  pyproject.toml  requirements.txt  resume-cli.cast  sonar-docker.sh  sonar-project.properties  wsgi.py
.github/workflows/: docker-image.yml  pylint.yml
data/experience/: all_experience.json  last_experience.json
data/skills/: skills.json
static/: app.css  app.js
templates/: cv.html
