[tool.poetry]
name = "my-resume"
version = "1.0.0"
description = "My resume"
authors = ["David TISSOT <dtissot@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Flask = ">=3.0.3"
uwsgi = ">=2.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
